Specified operations on database Simplified using DatabaseProviders Checked controllers
* Errors when updating documents

ToDo:
- Authorization
- Register user
